new changes added

--- a/index.html
+++ b/index.html
@@ -36,11 +36,34 @@
     <div class="aboutus">
       <h2>About us</h2>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis amet nemo
-        doloribus, nesciunt veniam qui obcaecati atque laudantium rem, pariatur
-        similique. Excepturi eligendi reprehenderit impedit possimus
-        perspiciatis deleniti, iusto ullam?
+        Lorem, ipsum dolor sit amet ad mei praesent principes, est in elit
+        ignota legimus,hinc persius definitionem sit cu. Pro ne erat adipisci
+        instructior,per et fugit interesset intellegebat, eu persius evertitur
+        tincidunt eum. Nec amet antiopam et, per ullum offendit forensibus at,
+        partem laboramus an has. Ut sed viris dicant luptatum.In vel tation
+        iisque conceptam.
       </p>
+      <br>
+      <p>
+        Ea simul necessitatibus vix, ex has quaestio voluptaria mnesarchum.Est
+        ut veri saperet laoreet.
+      </p>
+    </div>
+    <div class="news">
+      <div class="coctailes">
+        <h2>News</h2>
+        <img src="juice.svg" alt="">
+        <div>
+          <h3>Yeni Kokteyllər</h3>
+        </div>
+
+      </div>
+      <div class="dinocatering">
+        <img src="catering.svg" alt="">
+        
+        <img src="DineBistroSoon.svg" alt="" class="dinebistrosoon">
+      </div>
+      </div>
     </div>
   </body>
 </html>
