footerpart almost ready

--- a/index.html
+++ b/index.html
@@ -53,16 +53,69 @@
       <div class="coctailes">
         <h2>News</h2>
         <img src="juice.svg" alt="">
-        <div>
-          <h3>Yeni Kokteyllər</h3>
-        </div>
+        
+          <div class="coctailes_main">
+            <h3>Yeni Kokteyllər</h3>
+            <div class="coctailes_main_main">
+            <p style="width: 33%;">Id vix alii menandri,legere vulputate...</p>
+            <p>4 April</p>
+          </div>
+          </div>
 
       </div>
-      <div class="dinocatering">
+      <div class="dinocatering">   
         <img src="catering.svg" alt="">
-        
-        <img src="DineBistroSoon.svg" alt="" class="dinebistrosoon">
+        <div class="coctailes_main">
+          <h3>Dino Catering</h3>
+          <div class="coctailes_main_main">
+          <p style="width: 70%;">Ea simul necessitati vix, ex has...</p>
+          <p>4 April</p>
+        </div>
+        </div>
       </div>
+      <div class="dinebistrosoon"> 
+        <img src="DineBistroSoon.svg" alt="" class="dinebistrosoon">
+        <div class="coctailes_main">
+          <h3>Dino Catering</h3>
+          <div class="coctailes_main_main">
+            <p style="width: 67%;">Id vix alii menandri,legere vulputate...</p>
+            <p>4 April</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="seeallnews">
+      <button>See all news</button>
+    </div>
+
+    <div class="secbg">
+      <div class="restorants_2">
+      <img src="DineHall.svg" alt="" />
+      <img src="DineBistro.svg" alt="" />
+      <img src="DineMeet.svg" alt="" />
+      <img src="DineBurger.svg" alt="" />
+      <img src="DineCatering.svg" alt="" />
+      <img src="DineHall.svg" alt="" />
+      </div>
+      <div class="subscribefornews">
+        <input type="text" placeholder="example@gmail.com">
+        <button>Send</button>
+      </div>
+      <div class="contact">
+        <div class="firstnumber">
+          <p>+994 50 123 4567</p>
+        </div>
+        <div class="secondnumber">
+          <p>+994 12 967 77 88</p>
+        </div>
+        <div class="thirdnumber">
+          <p>info@dine.az</p>
+        </div>
+        <div class="fourthnumber">
+          <p>hr@dine.az</p>
+        </div>
       </div>
     </div>
   </body>
