mobile version is completed

--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
       <img src="DineHall.svg" alt="" />
       </div>
       <div class="subscribefornews">
+        <p>Subscribe for news</p>
         <input type="text" placeholder="example@gmail.com">
         <button>Send</button>
       </div>
+      <p class="contact_p">Contact</p>
       <div class="contact">
         <div class="firstnumber">
           <p>+994 50 123 4567</p>
@@ -116,6 +118,24 @@
         <div class="fourthnumber">
           <p>hr@dine.az</p>
         </div>
+      </div>
+      <div class="download_place">
+        <div class="download_place_main">
+          <div class="download_place_main_main">
+          <p>Download application</p>
+          <h1>DINECLUB</h1>
+        </div>
+          <div class="logos">
+            <img src="google_play-removebg.png"  class = "google_play" alt="" />
+            <img src="images-removebg-preview.png" class = "app_store"alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="social_logos">
+        <img class="logo" src="facebook.png" alt="">
+        <img class="logo" src="instagram.png" alt="">
+        <img class="logo" src="telegram.png" alt="">
+        <img class="logo" src="youtube.png" alt="">
       </div>
     </div>
   </body>
