some part designed for desktop version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h2>AZ</h2>
         </div>
         <div class="main">
-          <h1 style="width: 75%">
+          <h1 class="main_h1">
             Lorem ipsum dolor sit amet, ad mei praesent principes.
           </h1>
         </div>
